Enhance README with project details and instructions
Added detailed project description, build instructions, and technical architecture overview.